--- a/store-locator/index.html
+++ b/store-locator/index.html
@@ -1192,8 +1192,9 @@
 										class="wpcf7-form-control has-spinner wpcf7-submit btn custom-btn" />
 								</div>
 							</div>
-							<p style="display: none !important;"><label>&#916;<textarea name="_wpcf7_ak_hp_textarea" cols="45"
-										rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js_1" name="_wpcf7_ak_js"
+							<p style="display: none !important;">
+								<Order Onlinelabel>&#916;<textarea name="_wpcf7_ak_hp_textarea" cols="45" rows="8"
+										maxlength="100"></textarea></Order><input type="hidden" id="ak_js_1" name="_wpcf7_ak_js"
 									value="117" />
 								<script>document.getElementById("ak_js_1").setAttribute("value", (new Date()).getTime());</script>
 							</p>
@@ -1202,9 +1203,7 @@
 					</div>
 				</div>
 			</div>
-			<button class="btn custom-btn openbtn" onclick="openNav()">Property On Rent Form</button>
-			<a href="https://order.kiosk-kaffee.com/store/1/delivery" class="btn custom-btn fixed-order-btn"
-				target="_blank">Order Online</a>
+
 		</div>
 
 		<footer id="footer" class="site-footer">
